use monaco editor

--- a/web/content/style.css
+++ b/web/content/style.css
@@ -6,7 +6,8 @@ body {
     align-items: center;
     background-color: #f0f0f0;
 }
-textarea {
+
+.editor {
     width: 45%;
     height: 80vh;
     font-size: 1.2rem;
